<resources>
    <string name="app_name">KotlinDemo</string>
    <string name="ADD">Add</string>
    <string name="DELETE">Delete</string>
    <string name="return_first">返回第一个界面</string>
    <string name="jump2second">跳转到第二个界面</string>
    <string name="test">Test</string>
    <string name="jump2third">跳转到第三个界面</string>
    <string name="listImage">ListImage</string>
    <string name="jump2forth">跳转到第四个界面</string>
    <string name="add_fragment">添加Fragment</string>
    <string name="origin_text">原来文字</string>
    <string name="jump2fifth">跳转到第五个界面</string>
    <string name="btn_saveData">保存数据</string>
    <string name="data">数据data</string>
    <string name="saved_sharedpreferences">保存到SharedPreferences中</string>
    <string name="jump2sixth">跳转到第六个界面</string>
    <string name="takePhoto">拍照</string>
    <string name="jump2seventh">跳转到第七个界面</string>
    <string name="getData">点击获取数据</string>
    <string name="jump2eighth">跳转到第八个界面</string>
    <string name="click2count">点击计数</string>
    <string name="click2clear">点击清空</string>
</resources>