<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_saveData" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/data"
        android:autofillHints="username"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_sharedpreferences" />
</LinearLayout>
